tests/neg-custom-args/captures/emptyref-in-self.scala
class Zip[A, B](underlying: String, other: String^) {
  this: Zip[A, B]^{underlying, other} =>  // error
}
